Fix for page overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,6 @@ h3 {
    ========================================================================== */
 
 .logo-head {
-	position: relative;
 	top: 20px;
 	left: 2%;
 }
